--- a/bio.html
+++ b/bio.html
@@ -44,14 +44,25 @@
 								<header class="major">
 								<!--	<span class="date">April 25, 2017</span> Main -->
 								<!--	<h1>About Me</h1> -->
-									<p>Hello my Name is Jorge but you can call me Jor, Jorest, etc :)<br />
-									I am Quality-oriented engineer, who likes to communicate and discuss new ideas.<br />
-									Passionate about Game Programing,Game AI, and specially Game Design
+									<p>Hello, my name is Jorge but you can call me Jor, Jorest, George, etc.<br />
+										I am a computer science engineer, who likes to communicate and discuss new ideas.<br />
+										Passionate about video games and game design 
 									</p>
 								</header>
 								<div class="image main"><img src="images/neuroev.png" alt="" /></div>
-								<p>Info about me soon</p>
-								<p></p>
+								<p>Other things that I really like :)</p>
+								<ul>
+									<li>Dogs</li>
+									<li>Music</li>
+									<li>PC hardware</li>
+									<li>Philosophy</li>
+									<li>Coffee</li>
+									<li>Comics</li>
+									<li>Science</li>
+									<li>Anime</li>
+									<li>Movies</li>
+
+								</ul>
 							</section>
 
 					</div>
