--- a/bio.html
+++ b/bio.html
@@ -45,7 +45,7 @@
 								<!--	<span class="date">April 25, 2017</span> Main -->
 								<h1>About Me</h1>
 									<p>Hello! My name is Jorge, but you can call me Jor, Jorest, George, etc.<br />
-									I am an engineer who likes tocommunicate and discuss new ideas.<br />
+									I am an engineer who likes to communicate and discuss new ideas.<br />
 									Passionate about Game Programing, and specially Game Design.
 									</p>
 								</header>
@@ -83,7 +83,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
