--- a/bio.html
+++ b/bio.html
@@ -46,7 +46,7 @@
 								<h1>About Me</h1>
 									<p>Hello! My name is Jorge, but you can call me Jor, Jorest, George, etc.<br />
 									I am an engineer who likes to communicate and discuss new ideas.<br />
-									Passionate about Game Programing, and specially Game Design.
+									Passionate about Game Programing, and Game Design.
 									</p>
 								</header>
 								<div class="image main">
@@ -56,7 +56,8 @@
 								Other things that I like:
 								<ul>	
 									<li>Dogs</li> 	
-									<li>Music</li> 
+									<li>Music</li>
+									<li>Movies</li> 
 									<li>PC hardware</li> 
 									<li>Philosophy</li> 
 									<li>Science</li> 
