--- a/bio.html
+++ b/bio.html
@@ -29,7 +29,7 @@
             <ul class="links">
                 <li><a href="index.html">Work</a></li>
                 <li class="active"><a href="bio.html">About Me</a></li>
-                <li><a href="resume.html">Resume</a></li>
+                <!-- <li><a href="resume.html">Resume</a></li>   RESUME TAKEN DOWN FOR NOW -->
 
             </ul>
             <ul class="icons">
@@ -46,7 +46,7 @@
                 <header class="major">
                     <!--	<span class="date">April 25, 2017</span> Main -->
                     <h1>About Me</h1>
-                    <p>Hello! My name is Jorge, but you can call me Jor, Jorest, George, etc.<br /> I am an engineer who likes to communicate and discuss new ideas.<br /> Passionate about Game Programing, and Game Design.
+                    <p>Hello! My name is Jorge, but you can call me Jorest, George, etc.<br /> I am an engineer who likes to communicate and discuss new ideas.<br /> Passionate about Game Programing, Game Design, and VR.
                     </p>
                 </header>
                 <div class="image main">
