--- a/bio.html
+++ b/bio.html
@@ -27,7 +27,7 @@
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li><a href="index.html">Projects</a></li>
+                <li><a href="index.html">Personal Projects</a></li>
                 <li class="active"><a href="bio.html">About Me</a></li>
                 <li><a href="index2.html">Participated In</a></li>
                 <!-- <li><a href="resume.html">Resume</a></li>   RESUME TAKEN DOWN FOR NOW -->
@@ -48,22 +48,20 @@
                     <!--	<span class="date">April 25, 2017</span> Main -->
                     <h1>About Me</h1>
                     <img src="images/roundportrait.png" alt="" />
-                    <p>Hello! My name is Jorge, but you can also call me Jorest or George. I am an engineer who likes to discuss new ideas, make games, and break them as well! My main interests are Game Programing, Game Design, VR and AI. I am based on Cologne
-                        and currently I am studying a Master's Degree in Game Development and Research.
-
-                    </p>
+                    <p>Hello! My name is Jorge, I am a Game Programmer and Designer from Guatemala, based in Cologne. I like to discuss new ideas, make games, and also break them apart. My main interests are Virtual Reality, Game Balancing and AI. I am currently
+                        working in my masters thesis at the Cologne Game Lab. </p>
                 </header>
 
                 Other things that I like:
                 <ul>
-                    <li>Dogs</li>
+                    <li>Comedy</li>
                     <li>Music</li>
                     <li>Movies</li>
                     <li>PC hardware</li>
-                    <li>Philosophy</li>
+                    <li>Psychology</li>
                     <li>Science</li>
-                    <li>Memes</li>
-                    <li>Anime</li>
+                    <li>Dogs</li>
+                    <li>Board Games</li>
                 </ul>
 
             </section>
