--- a/bio.html
+++ b/bio.html
@@ -49,8 +49,8 @@
                     <!--	<span class="date">April 25, 2017</span> Main -->
                     <h1>About Me</h1>
                     <img src="images/roundportrait.png" alt="" />
-                    <p>Hello! My name is Jorge, I am a Game Programmer and Designer from Guatemala, based in Cologne. I like to discuss new ideas, make games, and also break them apart. My main interests are Virtual Reality, Game Balancing and AI. I am currently
-                        working in my masters thesis at the Cologne Game Lab. </p>
+                    <p>Hello! My name is Jorge, I am a Game Programmer and Designer from Guatemala, based in Trondheim. I like to discuss new ideas, make games, and also break them apart. My main interests are Virtual Reality and Experience Design. I am currently
+                        working as an XR Developer at the Norwegian University of Science and Technology. </p>
                 </header>
 
                 Other things that I like:
