updated about me

--- a/bio.html
+++ b/bio.html
@@ -34,7 +34,7 @@
 
             </ul>
             <ul class="icons">
-                <li><a href="https://www.linkedin.com/in/jorge-gamedev/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
+                <li><a href="https://www.linkedin.com/in/jorest-dev/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
                 <li><a href="https://github.com/Jorest" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
             </ul>
         </nav>
@@ -48,20 +48,17 @@
                     <!--	<span class="date">April 25, 2017</span> Main -->
                     <h1>About Me</h1>
                     <img src="images/roundportrait.png" alt="" />
-                    <p>Hello! My name is Jorge, I am a Game Programmer and Designer from Guatemala, based in Trondheim. I like to discuss new ideas, make games, and also break them apart. My main interests are Virtual Reality and Experience Design. I am currently
-                        working as an XR Developer at the Norwegian University of Science and Technology. </p>
+                    <p>Hello! My name is Jorge, I am a Game Programmer and Designer from Guatemala, based in Trondheim. I like to discuss new ideas, make games, and also break them apart. My main interests are Virtual Reality and Experience Design. 
+                    Currently interested In experimenting more with Mixed reality and gesture recogniziton. </p>
                 </header>
 
                 Other things that I like:
                 <ul>
-                    <li>Comedy</li>
                     <li>Music</li>
                     <li>Movies</li>
                     <li>PC hardware</li>
                     <li>Psychology</li>
-                    <li>Science</li>
                     <li>Dogs</li>
-                    <li>Board Games</li>
                 </ul>
 
             </section>
