--- a/bio.html
+++ b/bio.html
@@ -27,7 +27,7 @@
         <!-- Nav -->
         <nav id="nav">
             <ul class="links">
-                <li><a href="index.html">Personal Projects</a></li>
+                <li><a href="index.html">Projects</a></li>
                 <li><a href="index2.html">Participated In</a></li>
                 <li class="active"><a href="bio.html">About Me</a></li>
                 <!-- <li><a href="resume.html">Resume</a></li>   RESUME TAKEN DOWN FOR NOW -->
