--- a/bio.html
+++ b/bio.html
@@ -47,7 +47,7 @@
                 <header class="major">
                     <!--	<span class="date">April 25, 2017</span> Main -->
                     <h1>About Me</h1>
-                    <img src="images/roundportrait.png" alt="" />
+                    <img src="images/meWide.png" alt="" />
                     <p>Hello! My name is Jorge, I am a Game Programmer and Designer from Guatemala, based in Trondheim. I like to discuss new ideas, make games, and also break them apart. My main interests are Virtual Reality and Experience Design. 
                     Currently interested In experimenting more with Mixed reality and gesture recogniziton. </p>
                 </header>
